use_case_utils/yaml/tensorserving-deploy-no-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tensorserving
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tensorserving
  template:
    metadata:
      labels:
        app: tensorserving
    spec:
      containers:
      - name: tensorserving
        image: nicolobartelucci/objectdetectionserving:latest
        ports:
        - containerPort: 8501
        resources:
         # requests:
           # memory: "64Mi"
           # cpu: "250m"
          limits:
           #  memory: "128Mi"
            cpu: "1"
