use_case_utils/yaml/ts-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ts-svc
spec:
  type: NodePort
  selector:
    app: tensorserving
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
      nodePort: 30950
      name: http
