use_case_utils/yaml/ts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tensorserving-svc
spec:
  selector:
    app: tensorserving
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
      name: http
